Erreur dans l'étape 4 corrigée